--- a/app/src/main/res/layout/fragment_podcasts.xml
+++ b/app/src/main/res/layout/fragment_podcasts.xml
@@ -23,6 +23,11 @@
         android:id="@+id/recyclerViewPodcasts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:spanCount="2"
+        tools:itemCount="20"
+        tools:layout_editor_absoluteX="0dp"
+        tools:listitem="@layout/item_podcast" />
 </androidx.constraintlayout.widget.ConstraintLayout>
