--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,13 @@
         <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.Primary</item>
     </style>
 
+    <style name="TextAppearance.CollapsedToolbar" parent="TextAppearance.MaterialComponents.Headline6">
+
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+    </style>
+
+    <style name="TextAppearance.ExpandedToolbar" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+
 </resources>
