--- a/app/src/main/res/layout/fragment_collection_feeds.xml
+++ b/app/src/main/res/layout/fragment_collection_feeds.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.podcast.fragment.CollectionFragment">
+    tools:context=".ui.podcast.fragment.collectionfeed.CollectionFeedsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
