--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,21 +2,35 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
 
+        <!-- Primary Color-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryVariant</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+
+        <!-- Secondary Color-->
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="colorAccent">@color/colorSecondary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+
+        <!-- Toolbar -->
         <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.Primary</item>
+
+        <!-- Collapsing Toolbar -->
+        <item name="layout_scrollFlags">scroll|exitUntilCollapsed|snap</item>
+        <item name="expandedTitleGravity">bottom</item>
+        <item name="contentScrim">?attr/colorPrimary</item>
+        <item name="collapsedTitleTextAppearance">@style/TextAppearance.CollapsedToolbar</item>
+        <item name="expandedTitleTextAppearance">@style/TextAppearance.ExpandedToolbar</item>
     </style>
 
     <style name="TextAppearance.CollapsedToolbar" parent="TextAppearance.MaterialComponents.Headline6">
-
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
     <style name="TextAppearance.ExpandedToolbar" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textColor">@android:color/transparent</item>
     </style>
-
 </resources>
